--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,16 @@
     </dependency>
 </dependencies>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.1</version>
+            <scope>test</scope>
+        </dependency>
 
-
-
+    </dependencies>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
