--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <version>7.10.1</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>RELEASE</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
     <dependencies>
