--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 
 
-    <dependencies>
+    <dependenciesi>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -39,7 +39,7 @@
             <version>7.10.1</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+    </dependenciesi>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
