"created by mistake"Revert "feature:Git revert"
This reverts commit a8ac04f219d340b800327e51cb70baff6f2d82d5.

--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,28 @@
         <scope>test</scope>
     </dependency>
 </dependencies>
+
+
+
+
+
+    <dependenciesi>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependenciesi>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
